--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
-  "name": "react-frontend",
+  "name": "new-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
+    "antd-img-crop": "^3.16.0",
+    "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
+    "country-state-city": "^1.0.4",
+    "formik": "^2.1.4",
+    "geonames": "^0.2.1",
+    "history": "^5.1.0",
+    "jquery": "^3.6.0",
+    "little-state-machine": "^4.2.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "materialize-stepper": "^3.1.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-edit-text": "^4.2.0",
+    "react-hook-form": "^7.19.5",
+    "react-icons": "^4.3.1",
+    "react-materialize": "^3.10.0",
+    "react-multi-carousel": "^2.6.5",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
+    "react-select": "^3.0.8",
+    "react-spinners": "^0.11.0",
+    "react-step-progress": "^1.0.3",
+    "react-tinder-card": "^1.4.3",
+    "reactjs-popup": "^2.0.5",
+    "recharts": "^2.1.8",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +63,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-edit-text": "^4.0.1",
+    "sass": "^1.43.4"
   }
 }
